--- a/webroot/css/home.css
+++ b/webroot/css/home.css
@@ -1,4 +1,5 @@
 /* Home page styles */
+@import url('https://fonts.googleapis.com/css2?family=Teko&display=swap');
 @font-face {
     font-family: 'cakefont';
     src: url('../font/cakedingbats-webfont.eot');
@@ -72,4 +73,11 @@ hr {
 }
 #url-rewriting-warning {
     display: none;
+}
+p a.MarkRyk {
+    text-decoration: none;
+    font-family: 'Teko', cursive;
+	font-size: 20px;
+	font-weight: 400;
+    color: black;
 }
